[metadata]
name = blubber-orm
version = 2.0.0
author = Ade Balogun
author_email = ade.d.balogun@gmail.com
description = Simple Postgres access for Python Apps through psycopg2.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hubbub-tech/blubber-orm
project_urls =
    Bug Tracker = https://github.com/hubbub-tech/blubber-orm/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache 2.0
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    DateTime==4.3
    psycopg2==2.8.6
    pytz==2021.1
    uritools==3.0.1
    Werkzeug==1.0.1
    zope.interface==5.3.0

[options.packages.find]
where = src
